# Hylozoa-Engine-Engine

./: .envrc  .gitignore  .gitmodules  CMakeLists.txt  MAINTAINERS.md  README.md  justfile  project.hlz  scene_save.hylozoa  scene_saveout.hylozoa  shell.nix
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  child.yml  config.yml  feature_request.yml  general.yml  technical_debt.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: README.md  auto-format-and-tidy.yml  call-jenkins-benchmark-expose.yml  create-engine-release.yml  run-unit-tests.yml  tests.yml  tidy.yml  update-online-doxygen.yml
Assets/: beach.json  bird.prefab.json  coconut.prefab  coconut.prefab.json  dummy.json  test.prefab
Assets/scenes/: collisions.json
Assets/scripts/: DOC.md  ENTRYPOINT-TEMPLATE.lua  bird.lua  birdManager.lua  coconut.lua  crab.lua  palmtree.lua  test.lua  test2.lua
Assets/scripts/collisions/: box.lua  circle.lua
Assets/textures/: crab-walk.png:Zone.Identifier
benchmarks/: CMakeLists.txt
benchmarks/src/: Engine.cpp  Entity.cpp  Hacks.hpp  helloworld.cpp  settings.json
config/: test.flecs
docs/: API_Interface.md  Scripting_API.md
documentation/contributing/: DEV_GUIDELINES.md  README.md
scripts/: compile-default.sh  install-dependencies.sh  templateLinux
shaders/: composite_fs.sc  fs_simple.sc  light_fs.sc  light_vs.sc  varying.def.sc  vs_simple.sc
src/: CMakeLists.txt  Rulian_CMakeLists.txt  main.cpp  settings.json  tmp_main.cpp
src/Hylozoa-Engine/API/: Interface.cpp  Interface.hpp  Macros.hpp
src/Hylozoa-Engine/BGFX/: BGFX_manager.cpp  BGFX_manager.hpp  BGFX_renderer.hpp  layout.hpp  posColorVertex.hpp
src/Hylozoa-Engine/BGFX/renderer/: LightRenderer.hpp  PrimitiveRenderer.hpp
src/Hylozoa-Engine/Components/: Color.hpp  Components.hpp  Transform.hpp  Vector2.hpp
src/Hylozoa-Engine/Components/Audio/: Listener.hpp  Serializer.hpp
src/Hylozoa-Engine/Components/Camera/: Camera.hpp  Serializer.hpp
src/Hylozoa-Engine/Components/Context/: EngineContext.hpp  Events.hpp  Input.hpp  SceneState.hpp  Time.hpp
src/Hylozoa-Engine/Components/Core/: TagCompent.hpp  Transform2D.hpp  Velocity2D.hpp
src/Hylozoa-Engine/Components/Input/: Controllable.hpp
src/Hylozoa-Engine/Components/Interaction/: Collider.hpp  Input.hpp  Script.hpp
src/Hylozoa-Engine/Components/Module/: Vision.hpp
src/Hylozoa-Engine/Components/Physics/: Physics.hpp  Serializer.hpp
src/Hylozoa-Engine/Components/Render/: Animations.hpp  SpriteRenderer.hpp
src/Hylozoa-Engine/Components/Rendering/: Renderable.cpp  Renderable.hpp  Serializer.hpp  Sprite.cpp  Sprite.hpp  Texture.hpp
src/Hylozoa-Engine/Components/Scene/: Scene.hpp  UUID.cpp  UUID.hpp
src/Hylozoa-Engine/Components/Script/: Script.hpp  Serializer.hpp
src/Hylozoa-Engine/Components/Tags/: Serializer.hpp  Tags.hpp
src/Hylozoa-Engine/Components/Transform/: Serializer.hpp  Transform.cpp  Transform.hpp
src/Hylozoa-Engine/Core/: Audio.cpp  Audio.hpp  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  Input.cpp  Input.hpp  LayerManager.cpp  LayerManager.hpp  ResourceManager.hpp  Resources.cpp  Resources.hpp  Scene.cpp  Scene.hpp  SceneSerializer.cpp  SceneSerializer.hpp  Settings.cpp  Settings.hpp  Time.cpp  Time.hpp  jsonWrap.hpp
src/Hylozoa-Engine/Core/Entities/: Entity.cpp  Entity.hpp
src/Hylozoa-Engine/Core/IO/: Audio.cpp  Audio.hpp  Input.cpp  Input.hpp
src/Hylozoa-Engine/Core/Layers/: LayerManager.cpp  LayerManager.hpp
src/Hylozoa-Engine/Core/Resources/: ResourceManager.hpp  Resources.cpp  Resources.hpp
src/Hylozoa-Engine/Core/Scenes/: PrefabManager.cpp  PrefabManager.hpp  Scene.cpp  Scene.hpp  SceneSerializer.cpp  SceneSerializer.hpp
src/Hylozoa-Engine/Core/Script/: ScriptManager.cpp  ScriptManager.hpp  ScriptingAPI.cpp  ScriptingAPI.hpp
src/Hylozoa-Engine/Core/Tags/: TagsManager.cpp  TagsManager.hpp
src/Hylozoa-Engine/Core/Time/: Time.cpp  Time.hpp
src/Hylozoa-Engine/Placeholder/: Placeholder.cpp  Placeholder.hpp
src/Hylozoa-Engine/SDL/: SDL.cpp  SDL.hpp  SDL_Manager.cpp  SDL_Manager.hpp
src/Hylozoa-Engine/Systems/: Movements.hpp  RenderSystem.hpp  SystemManager.hpp  Systems.hpp  Transform.hpp
src/Hylozoa-Engine/Systems/Audio/: AudioSystem.cpp  AudioSystem.hpp
src/Hylozoa-Engine/Systems/Camera/: Camera.cpp  Camera.hpp
src/Hylozoa-Engine/Systems/Core/: TransformSystem.hpp
src/Hylozoa-Engine/Systems/HelloWorld/: HelloWorld.hpp
src/Hylozoa-Engine/Systems/Input/: Input.cpp  Input.hpp
src/Hylozoa-Engine/Systems/Manager/: SystemManager.hpp  Systems.hpp
src/Hylozoa-Engine/Systems/Movement/: Movement.cpp  Movement.hpp
src/Hylozoa-Engine/Systems/Physics/: Collision.cpp  Collision.hpp  Physics.cpp  Physics.hpp
src/Hylozoa-Engine/Systems/Renderer/: Renderer.cpp  Renderer.hpp
src/Hylozoa-Engine/Systems/Script/: ScriptSystem.cpp  ScriptSystem.hpp
src/Hylozoa-Engine/Systems/Transform/: Transform.cpp  Transform.hpp
src/Placeholder/: Placeholder.cpp  Placeholder.hpp
src/shaders/: varying.def.sc
tests/: CMakeLists.txt
tests/Graphic/: CMakeLists.txt  graphicTest  main.cpp
tests/src/: helloWorld_test.cpp
tests/src/Components/: Vector2_test.cpp
tests/src/Core/: Settings.cpp
tests/src/HeadlessEngine/: EngineFixture.hpp  Entities.cpp  Input.cpp  InputFixture.hpp  Time.cpp
tests/src/Placeholder/: placeholder_test.cpp
